--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.2.0",
+    "axios": "^0.19.0",
+    "element-ui": "^2.13.0",
     "vue": "^2.6.10",
+    "vue-eslint-parser": "^7.0.0",
     "vue-loader": "^15.7.2",
-    "vue-template-compiler": "^2.6.10"
+    "vue-router": "^3.1.3",
+    "vue-template-compiler": "^2.6.10",
+    "vuex": "^3.1.2",
+    "vuex-persistedstate": "^2.7.0"
   },
   "version": "0.1.0",
-  
   "devDependencies": {
+    "jest": "^24.9.0",
+    "nightwatch": "^1.3.1",
     "webpack-dev-server": "^3.9.0"
   }
 }
